--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,9 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.main_workbench {
+  border: 1px solid black;
+}
+.main_workbench_copy {
+  border: 1px solid black;
+}
